welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:6: error: not found: value pos
       pos=i
       ^indexOfValue:4: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-0 to L) {
        ^